fix alignment

--- a/frontend/src/components/skillsSet.module.scss
+++ b/frontend/src/components/skillsSet.module.scss
@@ -17,6 +17,7 @@
     gap: 1.25rem;
 
     .skillCSS {
+      text-align: center;
       padding: 0.25rem 0.75rem;
       background-color: $bgColor;
       border-radius: 4px;
